Outset box-shadow of window close button in overview causes visual glitches on some of intel video cards
I maintain a custom gnome-shell theme, it has outset box-shadow on window close buttons in gnome-shell overview (fedora 30, amd video card):
I received a bug report from manjaro (arch-based distro) user with intel hd 620 video card, button looks broken on his pc (default gnome-shell theme is not affected). I cant reproduce the issue in manjaro vm:
Here is a screenshot from meld (left part is window button code in upstream gnome-shell 3.32.0, right - from custom theme) - as you can see, the only difference, beside colors, is box-shadow style. We did some testing - removing spread from shadow, changing transparency level to 50%, it didn't work out. Setting box-shadow to 'none' fixes the issue.
While it is kinda irrelevant to current gnome-shell theme, merge request !461 (merged) was merged and it also has outset box shadow (box-shadow: -1px 1px 5px 0px transparentize(black, 0.5);
), so this issue most likely will appear with that MR applied (we tested box-shadow: 0 1px 2px 0px transparentize(black, 0.5);
- it didn't work).
If you have other ideas, what can cause this issue, please, share you thoughts.